--- a/TgBot/TourManagerIO/pom.xml
+++ b/TgBot/TourManagerIO/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.21</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>14</maven.compiler.source>
